--- a/Newbie/Module09/src/css/style.css
+++ b/Newbie/Module09/src/css/style.css
@@ -97,8 +97,8 @@ h3 {
 }
 
 body {
-  background-image: url(./assets/svg/bg-pattern-top.svg),
-    url(./assets/svg/bg-pattern-bottom.svg);
+  background-image: url(./svg/bg-pattern-top.svg),
+    url(./svg/bg-pattern-bottom.svg);
   background-repeat: no-repeat, no-repeat;
   background-position: right 50vw bottom 50vh, left 50vw top 50vh;
   background-color: var(--first-color);
