--- a/Junior/Module13/style.css
+++ b/Junior/Module13/style.css
@@ -1,3 +1,60 @@
+@import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap");
+
+:root {
+  --primary-color-100: hsl(176, 50%, 47%);
+  --primary-color-200: hsl(176, 72%, 28%);
+
+  --neutral-color-100: hsl(0, 0%, 0%);
+  --neutral-color-200: hsl(0, 0%, 48%);
+
+  --fs: 16px;
+  --ff-commissioner: "Commissioner", sans-serif;
+  --fw400: 400;
+  --fw500: 500;
+  --fw700: 700;
+}
+
+/* CSS Reset */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/* General Styling */
+
 /* General Styles */
 
 * {
@@ -105,7 +162,7 @@ main.inactive {
 header {
   width: 100%;
   padding: 3rem 7.5% 21rem;
-  background-image: url("image-hero-mobile.jpg");
+  background-image: url("./images/image-hero-mobile.jpg");
   background-size: cover;
   box-shadow: inset 0 0 15rem rgba(0, 0, 0, 0.5);
 }
@@ -196,12 +253,19 @@ header {
 }
 
 #progressBar div {
+  max-width: 100%;
+  width: 37.58%;
   position: absolute;
   left: 0;
   display: block;
   height: 1rem;
   background-color: hsl(176, 50%, 47%);
   border-radius: 0.5rem;
+  -webkit-transition: width 0s ease-out;
+  -moz-transition: width 0s ease-out;
+  -ms-transition: width 0s ease-out;
+  -o-transition: width 0s ease-out;
+  transition: width 0s ease-out;
 }
 
 #about {
@@ -262,6 +326,8 @@ header {
 }
 
 #mobileNav {
+  max-height: 0;
+  opacity: 0;
   position: absolute;
   top: 8rem;
   width: 90%;
@@ -560,6 +626,7 @@ input[type="radio"] {
 }
 
 .pledge {
+  max-height: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -726,7 +793,7 @@ input[type="radio"] {
     display: block;
   }
   header {
-    background-image: url("image-hero-desktop.jpg");
+    background-image: url("./images/image-hero-desktop.jpg");
     background-position: center;
     box-shadow: inset 0 0 15rem rgb(0, 0, 0);
   }
